k8s-kyverno-try/require-app-label.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-app-label
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: Pod must have an app label.
        pattern:
          metadata:
            labels:
              app: "?*"
